fix #12830: Only show “Add comment” and “View” if comments are visible
git-svn-id: http://halodev.ontoprise.com/svn/HaloSMWExtension/trunk@8562 f80b7aa0-dfcc-4e65-a0d9-74108174cbc8

--- a/extensions/Collaboration/skins/Comment/collaboration-comment.css
+++ b/extensions/Collaboration/skins/Comment/collaboration-comment.css
@@ -27,6 +27,11 @@ span.collabComInternComment {
 span#collabComToggle, span#collabComFormToggle {
 	color: #116988;
 	cursor: pointer;
+	display: inline;
+}
+span#collabComViewToggle {
+	color: grey;
+	display: inline;
 }
 
 span.collabComInternAvg {
@@ -49,10 +54,6 @@ div.collabComInternRatingIcon img {
  * This is used as result printer template for
  * the query of existing comments
  */
-span#collabComToggleView {
-	color: grey;
-}
-
 div.collabComResInfo,div.collabComResInfoSuper {
 	display: none;
 }
